--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -24,6 +24,143 @@
     border-radius: 0px;   
 }
 
+.light-cyan-button {
+    background-color: #006064 !important;
+    color: #fff !important;
+}
+
+.light-cyan-button:hover{
+    background-color: #00ACC1 !important;
+}
+
+.dark-cyan-button{
+    background-color: #424242 !important;
+}
+
+.dark-cyan-button:hover{
+    background-color: #00B8D4 !important;
+}
+
+.light-blue-button {
+    background-color: #01579B !important;
+    color: #fff !important;
+}
+
+.light-blue-button:hover{
+    background-color: #039BE5 !important;
+}
+
+.dark-blue-button{
+    background-color: #424242 !important;
+}
+
+.dark-blue-button:hover{
+    background-color: #0091EA !important;
+}
+
+.light-purple-button {
+    background-color: #4A148C !important;
+    color: #fff !important;
+}
+
+.light-purple-button:hover{
+    background-color: #8E24AA !important;
+}
+
+.dark-purple-button {
+    background-color: #424242 !important;
+}
+
+.dark-purple-button:hover{
+    background-color: #AA00FF !important;
+}
+
+.light-pink-button {
+    background-color: #880E4F !important;
+    color: #fff !important;
+}
+
+.light-pink-button:hover {
+    background-color: #D81B60 !important;
+}
+
+.dark-pink-button {
+    background-color: #424242 !important;
+}
+
+.dark-pink-button:hover {
+    background-color: #C51162 !important;
+}
+
+.light-orange-button {
+    background-color: #E65100 !important;
+    color: #fff !important;
+}
+
+.light-orange-button:hover {
+    background-color: #FB8C00 !important;
+}
+
+.dark-orange-button {
+    background-color: #424242 !important;
+}
+
+.dark-orange-button:hover {
+    background-color: #FFAB00  !important;
+}
+
+.light-teal-button {
+    background-color: #004D40 !important;
+    color: #fff !important;
+}
+
+.light-teal-button:hover {
+    background-color: #00897B !important;
+}
+
+.dark-teal-button {
+    background-color: #424242 !important;   
+}
+
+.dark-teal-button:hover{
+    background-color: #00BFA5 !important;
+}
+
+.light-green-button {
+    background-color: #33691E !important;
+    color: #fff !important;
+}
+
+.light-green-button:hover {
+    background-color: #7CB342  !important;
+}
+
+.dark-green-button {
+    background-color: #424242 !important;   
+}
+
+.dark-green-button:hover{
+    background-color: #8BC34A !important;
+}
+
+.light-gray-button {
+    background-color: #212121 !important;
+    color: #fff !important;
+}
+
+.light-gray-button:hover {
+    background-color: #757575  !important;
+}
+
+.dark-gray-button {
+    background-color: #424242 !important;   
+}
+
+.dark-gray-button:hover{
+    background-color: #9e9e9e !important;
+}
+
+
 /* .mat-button, .mat-raised-button{
     background-color: var(--primary-color);
 }  */
