--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -11,69 +11,69 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$interfaces-proyecto-light-cyan-primary: mat-palette($mat-cyan, 900);
-$interfaces-proyecto-light-cyan-accent: mat-palette($mat-cyan, 600);
-$interfaces-proyecto-light-cyan-warn: mat-palette($mat-cyan, 300);
+$interfaces-proyecto-light-cyan-primary: mat-palette($mat-cyan, 600);
+$interfaces-proyecto-light-cyan-accent: mat-palette($mat-cyan, 300);
+$interfaces-proyecto-light-cyan-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-cyan-primary: mat-palette($mat-cyan, A900);
-$interfaces-proyecto-dark-cyan-accent: mat-palette($mat-cyan, A700);
-$interfaces-proyecto-dark-cyan-warn: mat-palette($mat-cyan, A400);
+$interfaces-proyecto-dark-cyan-primary: mat-palette($mat-cyan, A700);
+$interfaces-proyecto-dark-cyan-accent: mat-palette($mat-cyan, A400);
+$interfaces-proyecto-dark-cyan-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-light-blue-primary: mat-palette($mat-light-blue, 900);
-$interfaces-proyecto-light-blue-accent: mat-palette($mat-light-blue, 600);
-$interfaces-proyecto-light-blue-warn: mat-palette($mat-light-blue, 300);
+$interfaces-proyecto-light-blue-primary: mat-palette($mat-light-blue, 600);
+$interfaces-proyecto-light-blue-accent: mat-palette($mat-light-blue, 300);
+$interfaces-proyecto-light-blue-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-blue-primary: mat-palette($mat-light-blue, A900);
-$interfaces-proyecto-dark-blue-accent: mat-palette($mat-light-blue, A700);
-$interfaces-proyecto-dark-blue-warn: mat-palette($mat-light-blue, A400);
+$interfaces-proyecto-dark-blue-primary: mat-palette($mat-light-blue, A700);
+$interfaces-proyecto-dark-blue-accent: mat-palette($mat-light-blue, A400);
+$interfaces-proyecto-dark-blue-warn: mat-palette($mat-red, 400);
 
 $interfaces-proyecto-light-purple-primary: mat-palette($mat-purple, 900);
 $interfaces-proyecto-light-purple-accent: mat-palette($mat-purple, 600);
-$interfaces-proyecto-light-purple-warn: mat-palette($mat-purple, 300);
+$interfaces-proyecto-light-purple-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-purple-primary: mat-palette($mat-purple, A900);
-$interfaces-proyecto-dark-purple-accent: mat-palette($mat-purple, A700);
-$interfaces-proyecto-dark-purple-warn: mat-palette($mat-purple, A400);
+$interfaces-proyecto-dark-purple-primary: mat-palette($mat-purple, A700);
+$interfaces-proyecto-dark-purple-accent: mat-palette($mat-purple, A400);
+$interfaces-proyecto-dark-purple-warn: mat-palette($mat-red, 400);
 
-$interfaces-proyecto-light-pink-primary: mat-palette($mat-pink, 900);
-$interfaces-proyecto-light-pink-accent: mat-palette($mat-pink, 600);
-$interfaces-proyecto-light-pink-warn: mat-palette($mat-pink, 300);
+$interfaces-proyecto-light-pink-primary: mat-palette($mat-pink, 600);
+$interfaces-proyecto-light-pink-accent: mat-palette($mat-pink, 300);
+$interfaces-proyecto-light-pink-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-pink-primary: mat-palette($mat-pink, A900);
-$interfaces-proyecto-dark-pink-accent: mat-palette($mat-pink, A400);
-$interfaces-proyecto-dark-pink-warn: mat-palette($mat-pink, A200);
+$interfaces-proyecto-dark-pink-primary: mat-palette($mat-pink, 500);
+$interfaces-proyecto-dark-pink-accent: mat-palette($mat-pink, A200);
+$interfaces-proyecto-dark-pink-warn: mat-palette($mat-red, 400);
 
-$interfaces-proyecto-light-orange-primary: mat-palette($mat-orange, 900);
-$interfaces-proyecto-light-orange-accent: mat-palette($mat-orange, 600);
-$interfaces-proyecto-light-orange-warn: mat-palette($mat-orange, 300);
+$interfaces-proyecto-light-orange-primary: mat-palette($mat-orange, 600);
+$interfaces-proyecto-light-orange-accent: mat-palette($mat-orange, 400);
+$interfaces-proyecto-light-orange-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-orange-primary: mat-palette($mat-amber, A900);
-$interfaces-proyecto-dark-orange-accent: mat-palette($mat-amber, A700);
-$interfaces-proyecto-dark-orange-warn: mat-palette($mat-amber, A400);
+$interfaces-proyecto-dark-orange-primary: mat-palette($mat-amber, A700);
+$interfaces-proyecto-dark-orange-accent: mat-palette($mat-amber, A400);
+$interfaces-proyecto-dark-orange-warn: mat-palette($mat-red, 400);
 
-$interfaces-proyecto-light-teal-primary: mat-palette($mat-teal, 900);
-$interfaces-proyecto-light-teal-accent: mat-palette($mat-teal, 600);
-$interfaces-proyecto-light-teal-warn: mat-palette($mat-teal, 300);
+$interfaces-proyecto-light-teal-primary: mat-palette($mat-teal, 600);
+$interfaces-proyecto-light-teal-accent: mat-palette($mat-teal, 300);
+$interfaces-proyecto-light-teal-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-teal-primary: mat-palette($mat-teal, A900);
-$interfaces-proyecto-dark-teal-accent: mat-palette($mat-teal, A700);
-$interfaces-proyecto-dark-teal-warn: mat-palette($mat-teal, A400);
+$interfaces-proyecto-dark-teal-primary: mat-palette($mat-teal, A700);
+$interfaces-proyecto-dark-teal-accent: mat-palette($mat-teal, A400);
+$interfaces-proyecto-dark-teal-warn: mat-palette($mat-red, 400);
 
-$interfaces-proyecto-light-green-primary: mat-palette($mat-light-green, 900);
-$interfaces-proyecto-light-green-accent: mat-palette($mat-light-green, 600);
-$interfaces-proyecto-light-green-warn: mat-palette($mat-light-green, 300);
+$interfaces-proyecto-light-green-primary: mat-palette($mat-light-green, 600);
+$interfaces-proyecto-light-green-accent: mat-palette($mat-light-green, 300);
+$interfaces-proyecto-light-green-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-green-primary: mat-palette($mat-light-green, A900);
-$interfaces-proyecto-dark-green-accent: mat-palette($mat-light-green, 500);
-$interfaces-proyecto-dark-green-warn: mat-palette($mat-light-green, 300);
+$interfaces-proyecto-dark-green-primary: mat-palette($mat-light-green, 500);
+$interfaces-proyecto-dark-green-accent: mat-palette($mat-light-green, 300);
+$interfaces-proyecto-dark-green-warn: mat-palette($mat-red, 400);
 
-$interfaces-proyecto-light-gray-primary: mat-palette($mat-gray, 900);
-$interfaces-proyecto-light-gray-accent: mat-palette($mat-gray, 600);
-$interfaces-proyecto-light-gray-warn: mat-palette($mat-gray, 300);
+$interfaces-proyecto-light-gray-primary: mat-palette($mat-gray, 600);
+$interfaces-proyecto-light-gray-accent: mat-palette($mat-gray, 400);
+$interfaces-proyecto-light-gray-warn: mat-palette($mat-red, 600);
 
-$interfaces-proyecto-dark-gray-primary: mat-palette($mat-gray, A900);
-$interfaces-proyecto-dark-gray-accent: mat-palette($mat-gray, 500);
-$interfaces-proyecto-dark-gray-warn: mat-palette($mat-gray, 400);
+$interfaces-proyecto-dark-gray-primary: mat-palette($mat-gray, 500);
+$interfaces-proyecto-dark-gray-accent: mat-palette($mat-gray, 400);
+$interfaces-proyecto-dark-gray-warn: mat-palette($mat-red, 400);
 
 
 // Create the theme object. A theme consists of configurations for individual
@@ -82,7 +82,7 @@ $interfaces-proyecto-light-cyan-theme: mat-light-theme((
   color: (
     primary: $interfaces-proyecto-light-cyan-primary,
     accent: $interfaces-proyecto-light-cyan-accent,
-    warn: $interfaces-proyecto-light-cyan-warn
+    warn: $interfaces-proyecto-light-cyan-warn,
   )
 ));
 
