--- a/src/app/pages/buscar-cotizacion/agregar-cotizacion/agregar-cotizacion.component.css
+++ b/src/app/pages/buscar-cotizacion/agregar-cotizacion/agregar-cotizacion.component.css
@@ -1,5 +1,68 @@
 .main {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.title-modal {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    height: 70px;
+}
+
+.title-modal h2 {
+    margin: 0;
+}
+
+.form-group-client {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.row-inputs {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.mat-tab-content{
+    padding-top: 20px;
+}
+
+.form-input {
+    width: 48%; 
+}
+
+.select-prod {
+    width: 48%;
+}
+
+.ancho-largo {
+    width: 23%;
+}
+
+.footer-stepper {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form-input-full {
+    width: 100%;
 }
