--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
@@ -7,11 +7,12 @@
                 <mat-icon color="primary" class="search-icon" matPrefix>search</mat-icon>
             </span>
         </mat-form-field>
-        <button (click)="agregarCotizacion()" [class]='colorMode' class="add-btn" mat-fab matTooltip="Crear Cotización" [color] = "color" (mouseover) =" color = 'accent'" (mouseout) =" color = 'primary'">
+        <button (click)="agregarCotizacion()" [class]='colorMode' class="add-btn" mat-fab matTooltip="Crear Cotización"
+            [color]="color" (mouseover)=" color = 'accent'" (mouseout)=" color = 'primary'">
             <mat-icon>add</mat-icon>
         </button>
     </div>
-    <div class="mat-elevation-z8 table">
+    <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
 
             <!-- ID Column -->
@@ -21,36 +22,50 @@
             </ng-container>
 
             <!-- Progress Column -->
-            <ng-container matColumnDef="progress">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-                <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del cliente </th>
+                <td mat-cell *matCellDef="let row"> Marco Antonio Guajardo Vigil </td>
             </ng-container>
 
             <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+            <ng-container matColumnDef="fecha">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+                <td mat-cell *matCellDef="let row"> {{row.createdAt | date: 'dd / MM / yyyy'}} </td>
             </ng-container>
 
             <!-- Color Column -->
-            <ng-container matColumnDef="color">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-                <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+                <td mat-cell *matCellDef="let row"> {{row.estado}} </td>
+            </ng-container>
+
+            <!-- Color Column -->
+            <ng-container matColumnDef="total">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
+                <td mat-cell *matCellDef="let row"> {{row.total}} </td>
             </ng-container>
 
             <!-- Actions Column -->
-            <ng-container matColumnDef="acciones">
-                <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <ng-container matColumnDef="editar">
+                <th mat-header-cell *matHeaderCellDef> Editar </th>
                 <td mat-cell *matCellDef="let row">
-                    <div class="actions-container">
-                        <button class="table-btn" mat-icon-button mat-button aria-label="Example icon button with a heart icon" matTooltip="Editar Cotización" >
-                            <mat-icon class="edit-button" color="primary" >edit</mat-icon>
-                        </button>
-                        <button class="table-btn" mat-icon-button mat-button aria-l0000abel="Example icon button with a heart icon"  matTooltip="Eliminar Cotización" (click)="onDelete(row)">
-                            <mat-icon color="warn">delete</mat-icon>
-                        </button>
-                    </div>
-                 </td>
+                    <button class="table-btn" mat-icon-button mat-button
+                        matTooltip="Editar Cotización">
+                        <mat-icon class="edit-button" color="primary">edit</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <!-- Actions Column -->
+            <ng-container matColumnDef="eliminar">
+                <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+                <td mat-cell *matCellDef="let row">
+                    <button class="table-btn" mat-icon-button mat-button
+                        matTooltip="Eliminar Cotización"
+                        (click)="onDelete(row)">
+                        <mat-icon color="warn">delete</mat-icon>
+                    </button>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -58,10 +73,10 @@
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                <td class="mat-cell" colspan="4">No se han encontrado resultados para "{{input.value}}"</td>
             </tr>
         </table>
 
-        <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[6]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[6]"></mat-paginator>
     </div>
 </div>
