--- a/src/app/pages/buscar-cotizacion/agregar-cotizacion/agregar-cotizacion.component.html
+++ b/src/app/pages/buscar-cotizacion/agregar-cotizacion/agregar-cotizacion.component.html
@@ -64,9 +64,9 @@
                                 </mat-form-field>
                             </div>
                             <div class="row-inputs">
-                                <mat-form-field appearance="outline" color="primary" class="form-input">
-                                    <mat-label disabled >Precio unitario</mat-label>
-                                    <input autocomplete="off" matInput>
+                                <mat-form-field appearance="outline" color="primaryx" class="form-input">
+                                    <mat-label>Precio unitario</mat-label>
+                                    <input autocomplete="off" matInput readonly>
                                 </mat-form-field>
                                 <mat-form-field appearance="outline" color="primary" class="form-input">
                                     <mat-label>Cantidad</mat-label>
@@ -76,7 +76,7 @@
                             <div class="row-inputs">
                                 <mat-form-field appearance="outline" color="primary" class="form-input-full">
                                     <mat-label>Total</mat-label>
-                                    <input autocomplete="off" matInput>
+                                    <input autocomplete="off" matInput readonly>
                                 </mat-form-field>
                             </div>
                         </form>
