--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,17 @@ router-outlet {
 .mat-form-field-appearance-outline .mat-form-field-suffix {
   place-self: center;
 }
+
+.snackBarGreen {
+    background-color: 
+    #1DD581 !important;
+    color: #fff !important;
+    opacity: 0.9;
+}
+
+.snackBarRed {
+    background-color: #E53935 !important;
+    color: #fff !important;
+    text-align: center;
+    opacity: 0.9;
+}
