--- a/src/app/pages/buscar-cotizacion/editar-cotizacion/editar-cotizacion.component.css
+++ b/src/app/pages/buscar-cotizacion/editar-cotizacion/editar-cotizacion.component.css
@@ -73,6 +73,14 @@
     margin-right: 10px;
 }
 
+.dark mat-icon {
+    color: #ECEFF1 !important;
+}
+
+.light mat-icon {
+    color: #fff !important;
+}
+
 .example-right-align {
     text-align: right;
 }
