--- a/src/app/pages/almacen/almacen.component.html
+++ b/src/app/pages/almacen/almacen.component.html
@@ -7,6 +7,10 @@
                 <mat-icon color="primary" class="search-icon" matPrefix>search</mat-icon>
             </span>
         </mat-form-field>
+        <button (click)="agregarLamina()" [class]='colorMode' class="add-btn" mat-fab matTooltip="Crear Lamina"
+            [color]="color" (mouseover)=" color = 'accent'" (mouseout)=" color = 'primary'">
+            <mat-icon>add</mat-icon>
+        </button>
     </div>
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
@@ -19,33 +23,43 @@
 
             <!-- Progress Column -->
             <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del cliente </th>
-                <td mat-cell *matCellDef="let row"> {{row.nombre_cliente}} </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre de Lamina</th>
+                <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+            </ng-container>
+
+            <!-- Color Column -->
+            <ng-container matColumnDef="cantidad">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad </th>
+                <td mat-cell *matCellDef="let row"> {{row.cantidad}} </td>
             </ng-container>
 
             <!-- Name Column -->
-            <ng-container matColumnDef="telefono">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Teléfono </th>
-                <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+            <ng-container matColumnDef="nombre_proveedor">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del proveedor </th>
+                <td mat-cell *matCellDef="let row"> {{row.nombre_proveedor}} </td>
             </ng-container>
 
             <!-- Color Column -->
-            <ng-container matColumnDef="correo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Correo </th>
-                <td mat-cell *matCellDef="let row"> {{row.correo}} </td>
+            <ng-container matColumnDef="ultima_fecha">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Última fecha de entrada </th>
+                <td mat-cell *matCellDef="let row"> {{row.ultima_fecha | date: 'dd / MM / yyyy'}} </td>
             </ng-container>
 
-            <!-- Color Column -->
-            <ng-container matColumnDef="direccion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Dirección de Instalación </th>
-                <td mat-cell *matCellDef="let row"> {{row.direccion}} </td>
-            </ng-container>
+            <!-- Actions Column
+            <ng-container matColumnDef="anadir">
+                <th mat-header-cell *matHeaderCellDef> Añadir </th>
+                <td mat-cell *matCellDef="let row">
+                    <button [disabled]="row.estado === 'completada'" class="table-btn" mat-icon-button mat-button matTooltip="Añadir al almacen" (click)="anadirCantidad(row)">
+                        <mat-icon class="edit-button" [color]="(row.estado === 'completada') ? 'disabled' : 'primary'">add_box</mat-icon>
+                    </button>
+                </td>
+            </ng-container> -->
 
             <!-- Actions Column -->
             <ng-container matColumnDef="editar">
                 <th mat-header-cell *matHeaderCellDef> Editar </th>
                 <td mat-cell *matCellDef="let row">
-                    <button [disabled]="row.estado === 'completada'" class="table-btn" mat-icon-button mat-button matTooltip="Editar CLiente" (click)="editarClientes(row)">
+                    <button [disabled]="row.estado === 'completada'" class="table-btn" mat-icon-button mat-button matTooltip="Editar Lamina" (click)="EditarLamina(row)">
                         <mat-icon class="edit-button" [color]="(row.estado === 'completada') ? 'disabled' : 'primary'">edit</mat-icon>
                     </button>
                 </td>
@@ -55,7 +69,7 @@
             <ng-container matColumnDef="eliminar">
                 <th mat-header-cell *matHeaderCellDef> Eliminar </th>
                 <td mat-cell *matCellDef="let row">
-                    <button class="table-btn" mat-icon-button mat-button matTooltip="Eliminar Cliente"
+                    <button class="table-btn" mat-icon-button mat-button matTooltip="Eliminar Lamina"
                         (click)="onDelete(row)">
                         <mat-icon color="warn">delete</mat-icon>
                     </button>
@@ -67,7 +81,7 @@
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No se han encontrado resultados."</td>
+                <td class="mat-cell" colspan="4">No se han encontrado resultados.</td>
             </tr>
         </table>
 
