--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
@@ -71,7 +71,7 @@
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No se han encontrado resultados para "{{input.value}}"</td>
+                <td class="mat-cell" colspan="4">No se han encontrado resultados."</td>
             </tr>
         </table>
 
