--- a/src/app/pages/buscar-venta/buscar-venta.component.html
+++ b/src/app/pages/buscar-venta/buscar-venta.component.html
@@ -7,10 +7,6 @@
                 <mat-icon color="primary" class="search-icon" matPrefix>search</mat-icon>
             </span>
         </mat-form-field>
-        <button (click)="agregarCotizacion()" [class]='colorMode' class="add-btn" mat-fab matTooltip="Crear Cotización"
-            [color]="color" (mouseover)=" color = 'accent'" (mouseout)=" color = 'primary'">
-            <mat-icon>add</mat-icon>
-        </button>
     </div>
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
@@ -49,8 +45,8 @@
             <ng-container matColumnDef="editar">
                 <th mat-header-cell *matHeaderCellDef> Editar </th>
                 <td mat-cell *matCellDef="let row">
-                    <button [disabled]="row.estado === 'Completada'" class="table-btn" mat-icon-button mat-button matTooltip="Editar Cotización" (click)="editarCotizacion(row)">
-                        <mat-icon class="edit-button" [color]="(row.estado === 'Completada') ? 'disabled' : 'primary'">edit</mat-icon>
+                    <button [disabled]="row.estado === 'Finalizada'" class="table-btn" mat-icon-button mat-button matTooltip="Editar Cotización" (click)="editarCotizacion(row)">
+                        <mat-icon class="edit-button" [color]="(row.estado === 'completada') ? 'disabled' : 'primary'">edit</mat-icon>
                     </button>
                 </td>
             </ng-container>
