--- a/src/app/pages/buscar-venta/editar-venta/editar-venta.component.html
+++ b/src/app/pages/buscar-venta/editar-venta/editar-venta.component.html
@@ -199,7 +199,7 @@
                     </mat-expansion-panel>
                 </mat-accordion>
                 <mat-slide-toggle class="margin-top" color="primary" [(ngModel)]="checked">
-                    Cotización aprobada
+                    Venta Finalizada
                 </mat-slide-toggle>
                 <div class="footer-stepper">
                     <button mat-button color="warn" matStepperPrevious>Anterior</button>
